--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div id="container">
    <div id="header">Сайт-звіт до лабораторних робіт студентки 1 курсу Яловчук Валентини "Математики"</div>
    <div id="content">
-    <h2> Сайт-звіт до лабораторних робіт студентки 1 курсу Яловчук Валентини "Математики"</h2>
+    <h2> Домашня сторінка. Сайт-звіт до лабораторних робіт студентки 1 курсу Яловчук Валентини "Математики"</h2>
    </div>
    <div id="sidebar">
     <p><a href="index.html">Домашня сторінка</a></p>
