--- a/lab1.html
+++ b/lab1.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8" />
-  <title>Сайт-звіт до лабораторних робіт студентки 1 курсу "Математики"</title>
+  <title>Сайт-звіт до лабораторних робіт студентки 1 курсу Яловчук Валентини "Математики"</title>
   <style type="text/css">
    body {
     font: 10pt Arial, Helvetica, sans-serif; /* Шрифт на веб-странице */
@@ -53,21 +53,26 @@
  </head>
  <body>
   <div id="container">
-   <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 4 курсу групи "Менеджери"</div>
+   <div id="header">Сайт-звіт до лабораторних робіт студентки 1 курсу Яловчук Валентини "Математики"</div>
    <div id="content">
-    <h2>Сайт-звіт до лабораторних робіт студента (ки) 4 курсу групи "Менеджери"</h2>
+    <h2>звіт до лабораторної роботи №1. Тема - Текстовий процесор1</h2>
    </div>
    <div id="sidebar">
     <p><a href="index.html">Домашня сторінка</a></p>
-    <p><a href="lab1.html">звіт до лабораторної роботи №1. Тема - Текстовий процесор</a></p>
-    <p><a href="lab2.html">звіт до лабораторної роботи №2. Тема - Google презентація</a></p>
+    <p><a href="lab1.html">звіт до лабораторної роботи №1. Тема - Текстовий процесор1</a></p>
+    <p><a href="lab2.html">звіт до лабораторної роботи №2. Тема - Текстовий процесор2</a></p>
+    
     <p><a href="lab3.html">звіт до лабораторної роботи №3. Тема - Google малюнок</a></p>
-    <p><a href="lab4.html">звіт до лабораторної роботи №4. Тема - Google форма-опитування</a></p>
-    <p><a href="lab5.html">звіт до лабораторної роботи №5. Тема - Google форма-тестування</a></p>
-    <p><a href="lab6.html">звіт до лабораторної роботи №6. Тема -  Google група</a></p>
+    <p><a href="lab4.html">звіт до лабораторної роботи №4. Тема - Табличний процесор 1</a></p>
+    <p><a href="lab5.html">звіт до лабораторної роботи №5. Тема - Табличний процесор 2</a></p>
+    <p><a href="lab6.html">звіт до лабораторної роботи №6. Тема -  Табличний процесор 3</a></p>
+    <p><a href="lab7.html">звіт до лабораторної роботи №7. Тема -  Табличний процесор 4</a></p>
+    <p><a href="lab8.html">звіт до лабораторної роботи №8. Тема - Google презентація</a></p>
+     <p><a href="kr1.html">КОНИРОЛЬНА РОБОТА 1</a></p>
+    <p><a href="kr2.html">КОНИРОЛЬНА РОБОТА 2</a></p>
    </div>
    <div class="clear"></div>
-   <div id="footer">&copy; Сайт-звіт до лабораторних робіт студента (ки) 4 курсу групи "Менеджери"</div>
+   <div id="footer">&copy; Сайт-звіт до лабораторних робіт студентки 1 курсу Яловчук Валентини "Математики"</div>
   </div>
  </body>
 </html>
