--- a/lab6.html
+++ b/lab6.html
@@ -55,7 +55,7 @@
   <div id="container">
    <div id="header">Сайт-звіт до лабораторних робіт студентки 1 курсу Яловчук Валентини "Математики"</div>
    <div id="content">
-    <h2>звыт до лабораторної роботи №6.Табличний процесор.Використання функцій</h2>
+    <h2>звыт до лабораторної роботи №6. Тема - Табличний процесор.Використання функцій</h2>
    </div>
    <div id="sidebar">
     <p><a href="index.html">Домашня сторінка</a></p>
