--- a/lab6.html
+++ b/lab6.html
@@ -55,21 +55,21 @@
   <div id="container">
    <div id="header">Сайт-звіт до лабораторних робіт студентки 1 курсу Яловчук Валентини "Математики"</div>
    <div id="content">
-    <h2>звыт до лабораторної роботи №6. Тема - Табличний процесор.Використання функцій</h2>
+    <h2>Звіт до лабораторної роботи №6. Тема - Табличний процесор.Використання функцій</h2>
    </div>
    <div id="sidebar">
     <p><a href="index.html">Домашня сторінка</a></p>
-    <p><a href="lab1.html">звіт до лабораторної роботи №1. Тема - Текстовий процесор1</a></p>
-    <p><a href="lab2.html">звіт до лабораторної роботи №2. Тема - Текстовий процесор2</a></p>
+    <p><a href="lab1.html">Звіт до лабораторної роботи №1. Тема - Текстовий процесор 1</a></p>
+    <p><a href="lab2.html">Звіт до лабораторної роботи №2. Тема - Текстовий процесор 2</a></p>
     
-    <p><a href="lab3.html">звіт до лабораторної роботи №3. Тема - Google малюнок</a></p>
-    <p><a href="lab4.html">звіт до лабораторної роботи №4. Тема - Табличний процесор 1</a></p>
-    <p><a href="lab5.html">звіт до лабораторної роботи №5. Тема - Табличний процесор 2</a></p>
-    <p><a href="lab6.html">звіт до лабораторної роботи №6. Тема -  Табличний процесор 3</a></p>
-    <p><a href="lab7.html">звіт до лабораторної роботи №7. Тема -  Табличний процесор 4</a></p>
-    <p><a href="lab8.html">звіт до лабораторної роботи №8. Тема - Google презентація</a></p>
-     <p><a href="kr1.html">КОНИРОЛЬНА РОБОТА 1</a></p>
-    <p><a href="kr2.html">КОНИРОЛЬНА РОБОТА 2</a></p>
+    <p><a href="lab3.html">Звіт до лабораторної роботи №3. Тема - Google малюнок</a></p>
+    <p><a href="lab4.html">Звіт до лабораторної роботи №4. Тема - Табличний процесор 1</a></p>
+    <p><a href="lab5.html">Звіт до лабораторної роботи №5. Тема - Табличний процесор 2</a></p>
+    <p><a href="lab6.html">Звіт до лабораторної роботи №6. Тема - Табличний процесор 3</a></p>
+    <p><a href="lab7.html">Звіт до лабораторної роботи №7. Тема - Табличний процесор 4</a></p>
+    <p><a href="lab8.html">Звіт до лабораторної роботи №8. Тема - Google презентація</a></p>
+     <p><a href="kr1.html">Котрольна робота 1</a></p>
+    <p><a href="kr2.html">Контрольна робота 2</a></p>
    </div>
    <div class="clear"></div>
    <div id="footer">&copy; Сайт-звіт до лабораторних робіт студентки 1 курсу Яловчук Валентини "Математики"</div>
