--- a/lab1.html
+++ b/lab1.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8" />
-  <title>Сайт-Звіт до лабораторних робіт студентки 1 курсу Яловчук Валентини "Математики"</title>
+  <title>Сайт-звіт до лабораторних робіт студентки 1 курсу Яловчук Валентини "Математики"</title>
   <style type="text/css">
    body {
     font: 10pt Arial, Helvetica, sans-serif; /* Шрифт на веб-странице */
@@ -55,18 +55,18 @@
   <div id="container">
    <div id="header">Сайт-звіт до лабораторних робіт студентки 1 курсу Яловчук Валентини "Математики"</div>
    <div id="content">
-    <h2>Звіт до лабораторної роботи №1. Тема - Текстовий процесор 1</h2>
+    <h2> Звіт до лабораторної роботи №1. Тема - Форматування за зразком 1</h2>
    </div>
-   <div id="sidebar">
+   <div id="sebar">
     <p><a href="index.html">Домашня сторінка</a></p>
-    <p><a href="lab1.html">Звіт до лабораторної роботи №1. Тема - Текстовий процесор 1</a></p>
-    <p><a href="lab2.html">Звіт до лабораторної роботи №2. Тема - Текстовий процесор 2</a></p>
+    <p><a href="lab1.html">Звіт до лабораторної роботи №1. Тема - Форматування за зразком 1</a></p>
+    <p><a href="lab2.html">Звіт до лабораторної роботи №2. Тема - Форматування за зразком 2</a></p>
     
-    <p><a href="lab3.html">Звіт до лабораторної роботи №3. Тема - Google малюнок</a></p>
-    <p><a href="lab4.html">Звіт до лабораторної роботи №4. Тема - Табличний процесор 1</a></p>
-    <p><a href="lab5.html">Звіт до лабораторної роботи №5. Тема - Табличний процесор 2</a></p>
-    <p><a href="lab6.html">Звіт до лабораторної роботи №6. Тема - Табличний процесор 3</a></p>
-    <p><a href="lab7.html">Звіт до лабораторної роботи №7. Тема - Табличний процесор 4</a></p>
+    <p><a href="lab3.html">Звіт до лабораторної роботи №3. Тема - Спільний доступ до документів.Google Диск. OneDrive. Робота з Google Малюнок.</a></p>  </a></p>
+    <p><a href="lab4.html">Звіт до лабораторної роботи №4. Тема - Табличний процесор. Основи</a></p>
+    <p><a href="lab5.html">Звіт до лабораторної роботи №5. Тема - Табличний процесор. Адресація</a></p>
+    <p><a href="lab6.html">Звіт до лабораторної роботи №6. Тема - Табличний процесор. Використання функцій</a></p>
+    <p><a href="lab7.html">Звіт до лабораторної роботи №7. Тема - Абсолютна адрезація. Графки</a></p>
     <p><a href="lab8.html">Звіт до лабораторної роботи №8. Тема - Google презентація</a></p>
      <p><a href="kr1.html">Контрольна робота 1</a></p>
     <p><a href="kr2.html">Контрольна робота 2</a></p>
